# video-auto-dubbing

./: .env.example  .gitignore  .gitmodules  ALIYUN_ASR_BRANCH_README.md  CI_FIXES.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  DOCKER_FIXES.md  FILES_MANIFEST.md  GIT_COMMIT_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LOCAL_VS_DOCKER.md  OPTIMIZATION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_EN.md  README_UPDATE.md  READY_TO_DEPLOY.md  START_HERE.md  SUBTITLE_DEFAULT_CHANGE.md  SUCCESS_SUMMARY.md  SUMMARY.md  TESTING_GUIDE.md  TRANSLATION_CHUNKING_IMPLEMENTATION_SUMMARY.md  WORKER_INDEXTTSS_V2_INTEGRATION.md  deepv.md  docker-compose.prod.yml  docker-compose.v2.yml  docker-compose.yml  env.example  session_export_dd97b916_2026-02-02-09-24-09.md  setup_project.sh
.cursor/plans/: 后续开发规划_470ae87b.plan.md
.deepv/: settings.json
.github/workflows/: ci.yml  format-check.yml
api/: Dockerfile  go.mod  main.go
asr_service/: Dockerfile
backend/: Dockerfile  MULTI_SPEAKER_GUIDE.md  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  deps.py  monitoring.py  tasks.py  upload.py
backend/app/integrations/: __init__.py
backend/app/integrations/dashscope/: __init__.py  asr_client.py  llm_client.py  tts_client.py
backend/app/integrations/oss/: __init__.py  client.py
backend/app/models/: segment.py  task.py
backend/app/schemas/: segment.py
backend/app/services/: __init__.py  storage_service.py  translation_chunker.py  voice_service.py
backend/app/utils/: ffmpeg.py
backend/app/workers/: celery_app.py  tasks.py
backend/migrations/versions/: 002_add_voice_id_to_segments.py  004_fix_subtitle_mode_enum.py
backend/scripts/: check_services.py  show_asr.py
backend/tests/: test_integrations.py  test_oss.py
docs/: ARCHITECTURE_OVERVIEW.md  README.md  REFACTORING_PLAN_V2.md  REFACTORING_PROGRESS.md  REFACTORING_SUMMARY.md  aliyun_asr_integration.md  api-contracts.md  architecture-diagram.md  architecture.md  data-model.md  deployment-guide.md  deployment.md  offline-assets.md  pipeline-spec.md  queue-messages.md  quick-start.md  startup-guide.md  tts-service.md
docs/api/: backend-api.md
docs/architecture/: system-overview.md
docs/archive/: CODE_CLEANUP_REPORT.md  DEMO_REPORT.md  FINAL_SETUP_GUIDE.md  FINAL_SUMMARY.md  QUICK_DEPLOY.txt  TTS_CLEANUP_SUMMARY.md  TTS_SERVICE_INFO.md  TTS_SIMPLIFICATION_PLAN.md  (+1 more)
docs/guide/: frontend.md
frontend/: DEPLOYMENT.md  Dockerfile  README.md  dev.sh  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
gateway/: nginx.conf
scripts/: export_tts_model_bundle.sh  import_tts_model_bundle.sh  quick_deploy.sh  remote_check.sh  test_remote_tts.sh
tests/: test_aliyun_asr.go
tts_service/: Dockerfile  README.md  pyproject.toml
tts_service/app/: config.py  config_lean.py  exceptions.py  main.py  synthesizer_lean.py
web/: index.html
worker/: Dockerfile  go.mod  main.go
(+73 files in other folders)
